<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.spigotmc.hessentials</groupId>
	<artifactId>hEssentials</artifactId>
	<version>2.0.0</version>
	<packaging>jar</packaging>

	<name>HempfestEssentials</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>
	</properties>

	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>placeholderapi</id>
			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.16.1-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
         <groupId>me.clip</groupId>
          <artifactId>placeholderapi</artifactId>
          <version>2.10.6</version>
         <scope>provided</scope>
        </dependency>
		<dependency>
			<groupId>hEssentialsChat</groupId>
			<artifactId>hEssentialsGroups</artifactId>
			<version>1.0.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/src/main/resources/hEssentialsChat.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>com.github.Hempfest</groupId>
			<artifactId>HempCore</artifactId>
			<version>96915fddcf</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>CenterSpawn</groupId>
			<artifactId>CenterSpawn</artifactId>
			<version>1.0.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/src/main/resources/CenterSpawn.jar</systemPath>
		</dependency>
	</dependencies>
</project>
